--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             ];
             var canvas, preloader;
             var cjs = this.createjs;            
-            var dataSourceUrl = "http://confoo-cloud.cloudapp.net:80/";
+            var dataSourceUrl = "http://backchannel.cloudapp.net:80/";
             var fonts = ["Arial"];
             var tweets = [];
             var sinceId = 1000;
